# flask-album

./: .env-exemple  Dockerfile  LICENSE  README.md  compose.yaml  fly.toml  pyproject.toml  requirements.txt
app/: __init__.py  settings.py
app/blueprint/auth/: __init__.py
app/blueprint/auth/view/: login_view.py  logout_view.py
app/blueprint/blog/: __init__.py
app/blueprint/blog/view/: album_detail_view.py  home_view.py
app/blueprint/error/: __init__.py
app/controller/: create_album_controller.py  create_image_controller.py  delete_album_controller.py  delete_image_controller.py  update_album_controller.py  update_image_controller.py
app/model/: album_model.py  album_tag_model.py  image_model.py  tag_model.py  user_model.py
app/plugin/admin/: __init__.py
app/plugin/admin/form/: album_form.py  album_tag_form.py  image_form.py  tag_form.py
app/plugin/admin/view/: album_admin_view.py  album_tag_admin_view.py  image_admin_view.py  index_view.py  tag_admin_view.py  user_admin_view.py
app/plugin/api_rest_full/: __init__.py
app/plugin/api_rest_full/resource/: album_detail_resource.py  album_list_resource.py  home_resource.py  tag_list_resource.py
app/plugin/command/: __init__.py
app/plugin/cors/: __init__.py
app/plugin/database/: __init__.py
app/plugin/login_manager/: __init__.py
app/schema/: user_public_schema.py
app/util/: query.py  security.py
static/css/: reset.css  style.css
templates/: base.html
templates/auth/: login.html
templates/blog/: album_detail.html  album_list.html  home.html
templates/error/: error.html
