[project]
name = "flask-album"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-admin>=1.6.1",
    "flask>=3.1.0",
    "flask-restful>=0.3.10",
    "flask-cors>=5.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "python-dotenv>=1.0.1",
    "bcrypt>=4.2.1",
    "cloudinary>=1.41.0",
    "wtforms-sqlalchemy>=0.4.2",
    "pydantic-settings>=2.6.1",
    "psycopg[binary]>=3.2.3",
]
